container edit again

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
 <div class="body">
     <input id="cdnPath" style="display:none" value="https://ee.wpscdn.cn/wpscn">
+    <div class="container-fluid">
     <div class="container">
 <header id="header" class="header">
     <div class="content">
@@ -1128,6 +1129,7 @@
     <div class="decorate" id="decorate-1"></div>
     <div class="decorate" id="decorate-2"></div>
     <div class="decorate" id="decorate-3"></div>
+</div>
 </div>
 
 <!--[if lte IE 9]><script src="//cdn.bootcss.com/flexibility/2.0.1/flexibility.js"></script><![endif]-->
